--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div>
                             <div>
                                 <input type="checkbox">
-                                <p><span>Remember Me</span></p>
+                                <p><span style="font-weight: 400; color: rgb(97, 97, 97);">Remember Me</span></p>
                             </div>
                             <div>
                                <a href="...">Forgot Password?</a>
