--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
                         </div>
                     </div>
                     <div>
-                        <button type="submit">Sign In</button>
+                        <button type="submit" id="submit-btn">
+                            <div class="buttonload">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="none" stroke="#fff" stroke-linecap="round" stroke-width="4" d="M12 6.99998C9.1747 6.99987 6.99997 9.24998 7 12C7.00003 14.55 9.02119 17 12 17C14.7712 17 17 14.75 17 12"><animateTransform attributeName="transform" attributeType="XML" dur="560ms" from="0,12,12" repeatCount="indefinite" to="360,12,12" type="rotate"/></path></svg>
+                            </div>
+                            <div id="btn-text"><p><span>Sign In</span></p></div>
+                        </button>
                     </div>
                 </div>
                 
