fixed isUser method with foreach instead of sum and fixed condition blocks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                     </div>
             </div>
 
+            <div class="success-box">
+                    <div class="success-box-msg">
+                        ⓘ Login successful!
+                    </div>
+            </div>
+
             <form class="form">
                 <div>
                     <div><img src="./logo.png" width="70px" height="64px"></div>
